turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:11: error: ';' expected but '=' found.
  (colorToSet, move, state) = (rule(state)(indice)(0), rule(state)(indice)(1), rule(state)(indice)(2))
                            ^